{
    "name": "Player Input",
    "maps": [
        {
            "name": "Player",
            "id": "d687d2d3-09d0-4397-b860-cfff802a247f",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6b5d6781-b49f-4232-b7ba-053b8099efb4",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookAround",
                    "type": "Value",
                    "id": "44f411a6-b0b0-4398-a088-19782087bdf0",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "ceafc844-10bd-488c-9ecc-7fde14e7fe42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "DropRelic",
                    "type": "Button",
                    "id": "e7eaabfd-d8bc-4eb1-96d4-4585c79bc26c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ThrowRelic",
                    "type": "Button",
                    "id": "e774fdcd-2170-4afb-927c-9d0d0e0583f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "dba4dc8c-73bd-41e5-8771-44047521d52f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ResetRelic",
                    "type": "Button",
                    "id": "8d76aa48-bf7b-49b1-a979-bfb26a583dfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CastPrimarySpell",
                    "type": "Button",
                    "id": "e0b2139a-3f2b-424a-8d70-0cb517278706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CastSecondarySpell",
                    "type": "Button",
                    "id": "cc35d9e0-da21-40c8-9173-cdeab3cbfd1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b73f2c0a-0e4b-4875-8868-609dfb352ada",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16b53e9e-ae2b-4b92-b5b2-50f2a710c855",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fb20fea-638d-44c8-bd26-1419b4f4e83b",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThrowRelic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d49e6f0-7f8e-4cff-a281-3cf689d5f9b1",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DropRelic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b6665144-37e4-4cb7-b308-c544260ade33",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "256f206f-c7a8-41fb-a6c5-adf7efad6e5e",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51449835-1990-4cdc-a8b9-2ee4d4d68c37",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetRelic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "558543b1-79fa-4e1d-80ce-89ce350c3add",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastPrimarySpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4178b021-c13f-474e-b06e-0072b09edcb8",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSecondarySpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI Navigation",
            "id": "a36f2bf8-6389-4efb-b26c-fa9857f3e7d2",
            "actions": [
                {
                    "name": "MoveCursor",
                    "type": "Value",
                    "id": "7ca8f5b1-2e75-45d8-9e92-67889418bff9",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "5a267c94-de75-45cb-bf40-58bbe0d9912e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Start Game",
                    "type": "Button",
                    "id": "f704844b-6d96-4d19-91ab-33d19234279a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "CancelSelection",
                    "type": "Button",
                    "id": "baa91360-1423-4106-9d53-b5444975fda8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3f82658-d354-4e56-bf54-75a449f74949",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2917aef-f0a3-44a0-8290-42a6f14b7889",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "383ac6eb-334f-4a80-8a27-803581f9da09",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start Game",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c182f810-4802-4079-9d59-5d19fd273d60",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Sandstorm Sample Scene",
            "id": "bf4a7c5a-fb12-422e-a0da-4464058971a6",
            "actions": [
                {
                    "name": "CastSpell",
                    "type": "Button",
                    "id": "1864b438-8232-4f92-80c2-6edd6d0b3d7b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7bdaf581-6953-414a-90cd-eb92506746de",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}